gengo/tests/snapshots/analyzers_tests__analyzers_tests__test_simple__by_filepath.snap
---
source: gengo/tests/analyzers_tests.rs
expression: "analyzers.by_filepath(OsStr::new(\"test.sh\"))"
---
[
    Analyzer {
        language: Language {
            name: "Shell",
            category: Programming,
            color: "#aabbcc",
        },
        matchers: [
            Filepath(
                FilepathMatcher {
                    extensions: {
                        "sh",
                    },
                    filenames: {},
                    patterns: [],
                },
            ),
        ],
        heuristics: [],
        priority: 50,
    },
]
