gengo/tests/snapshots/analyzers_tests__analyzers_tests__test_simple__by_shebang.snap
---
source: gengo/tests/analyzers_tests.rs
expression: analyzers.by_shebang(contents)
---
[
    Analyzer {
        language: Language {
            name: "Fish",
            category: Programming,
            color: "#aaffaa",
        },
        matchers: [
            Shebang(
                ShebangMatcher {
                    interpreters: {
                        "fish",
                    },
                },
            ),
        ],
        heuristics: [],
        priority: 50,
    },
]
